syntax = "proto3";

package proto;

message Member {
    string nodeName  = 1;
    int32  RPCPort = 2;
    string time = 3;
}

message Discover {
    string serviceName  = 1;
    string options = 2;
    string time = 3;
}